fixed spacing around main banner image

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,3 +2,7 @@ footer {
     background-color: $bg-color-dark;
     color: $text-color-light;
 }
+
+footer p {
+    margin: 0;
+}
