--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -12,6 +12,10 @@
     font-size: 4em;
 }
 
+.banner-image img {
+    display: block;
+}
+
 
 .lesson-link-container {
     display: grid;
