--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -5,3 +5,7 @@
 .side-nav {
     color: $text-color-light;
 }
+
+.main-nav ul {
+    margin: 0;
+}
